--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     var CommentBox = React.createClass({
       loadCommentsFromServer: function() {
+        console.log('poll');
         $.ajax({
           url: this.props.url,
           dataType: 'json',
@@ -22,6 +23,14 @@
             console.error(this.props.url, status, err.toString());
           }.bind(this)
         });
+      },
+      handleCommentSubmit: function(comment) {
+        var comments = this.state.data;
+        var newComments = comments.concat([comment]);
+        this.setState({data: newComments});
+        //
+        console.log("this is where the post should go")
+        //
       },
       getInitialState: function() {
         return {data: []};
@@ -35,7 +44,7 @@
           <div className="commentBox">
             <h1>Comments</h1>
             <CommentList data={this.state.data} />
-            <CommentForm />
+            <CommentForm onCommentSubmit={this.handleCommentSubmit} />
           </div>
         );
       }
@@ -59,11 +68,25 @@
     });
 
     var CommentForm = React.createClass({
+      handleSubmit: function(e) {
+        e.preventDefault();
+        var author = React.findDOMNode(this.refs.author).value.trim();
+        var text = React.findDOMNode(this.refs.text).value.trim();
+        if (!text || !author) {
+          return
+        }
+        this.props.onCommentSubmit({author: author, text: text});
+        React.findDOMNode(this.refs.author).value = '';
+        React.findDOMNode(this.refs.text).value = '';
+        return;
+      },
       render: function() {
         return (
-          <div className="commentForm">
-            Hello, world!  I am a CommentForm.
-          </div>
+          <form className="commentForm" onSubmit={this.handleSubmit}>
+            <input type="text" placeholder="Your name" ref="author" />
+            <input type="text" placeholder="Say something..." ref="text" />
+            <input type="submit" value="Post" />
+          </form>
         );
       }
     });
